Upgrade Cloud DNS client from v2beta to v2
The v2 API is supposed to replace v1. It introduces supports for
regional zones (which apparently is not present in v2beta).

Since our zones predates v2, they are all global (the default).

Interestingly, v1 clients are consistently updated, but the last time v2
was updated was in 2022.

See: https://g3doc.corp.google.com/company/gfw/support/cloud/playbooks/dns/dns-api.md?#life-of-a-request